chore: Fix footer on mobile + content updates

--- a/components/navigation/footer/footer.module.scss
+++ b/components/navigation/footer/footer.module.scss
@@ -17,3 +17,11 @@
         flex-direction: column !important;
     }
 }
+
+.socials {
+    @include md {
+        padding-top: 1rem;
+        justify-content: flex-end !important;
+        flex-direction: row-reverse !important;
+    }
+}
